Search users logic added
