# service/api/api-handler.go
@@ -17,6 +17,7 @@ func (rt *_router) Handler() http.Handler {
 	rt.router.POST("/users/:userid/banned_users", rt.wrap(rt.banUser))
 	rt.router.DELETE("/users/:userid/banned_users/:banneduserid", rt.wrap(rt.unbanUser))
 	rt.router.GET("/users/:userid/stream", rt.wrap(rt.getMyStream))
+	rt.router.GET("/users", rt.wrap(rt.getUsers))
 
 	// Photo
 	rt.router.POST("/users/:userid/photos", rt.wrap(rt.uploadPhoto))
